# osu_dataset_builder

./: .gitattributes  .gitignore  .gitmodules  README.md  SCHEMA.md
osu-dataset-builder/: Cargo.toml
osu-dataset-builder/src/: batch_writer.rs  main.rs
osu-enricher/: Cargo.toml
osu-enricher/src/: batch_writer.rs  clients.rs  main.rs
osu-player/: Cargo.toml  README.md
osu-player/assets/fonts/: README_digit_gen_cmd.txt  digit_gen_cmd.txt  digits_charset.txt  digits_msdf.json
osu-player/assets/shaders/: arrow.wgsl  circle.wgsl  circle_batch.wgsl  circle_instanced.wgsl  digit_sdf.wgsl  grid.wgsl  msdf_batch.wgsl  msdf_text.wgsl  slider_body.wgsl  spinner.wgsl
osu-player/src/: audio.rs  beatmap.rs  input.rs  main.rs  playback.rs
osu-player/src/rendering/: circles.rs  mod.rs  playfield.rs  sdf_materials.rs  sdf_render.rs  sliders.rs  spinners.rs
osu-player/src/ui/: controls.rs  hud.rs  mod.rs  overlays.rs  timeline.rs
osu-reconstructor/: Cargo.toml  README.md
osu-reconstructor/src/: beatmap.rs  folder.rs  lib.rs  reader.rs  storyboard.rs  types.rs
osu-viewer/: Cargo.toml  README.md
osu-viewer/src/: app.rs  audio.rs  beatmap.rs  main.rs  playback.rs  renderer.rs  timeline.rs
osz-extractor/: Cargo.toml
osz-extractor/src/: main.rs
