[package]
name = "osu-player"
version = "0.1.0"
edition = "2021"
description = "Bevy-powered .osu beatmap player with 2D rendering"

[dependencies]
# Game Engine - with Tracy profiler support (requires Tracy profiler running)
#bevy = { version = "0.17", default-features = true, features = ["trace", "trace_tracy"] }
bevy = { version = "0.17", default-features = true, features = [] }


# Audio - enable MP3 and WAV support
bevy_kira_audio = { version = "0.24", features = ["mp3", "wav", "ogg"] }

# Parsing
rosu-map = "0.2"

# Utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[profile.release]
#opt-level = 3
#opt-level = 'z'
opt-level = 1
#lto = "thin"
#lto = "fat"
#strip = true

# comment me out
#codegen-units = 1
#panic = "abort"
