[package]
name = "osu-viewer"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated .osu file viewer with timeline scrubbing"

[dependencies]
# Parsing
rosu-map = "0.2"

# Rendering - let eframe manage wgpu
egui = "0.30"
eframe = { version = "0.30", default-features = true, features = ["wgpu"] }

# Audio
kira = "0.11"

# Utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = false
